--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ">=2.13.4 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.18.2  <3.0.0"
+  # flutter: ">=1.17.0"
 
 dependencies:
   flutter:
